# sample-multi-agent-aurora-bedrock-agentcore

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  THIRD-PARTY-LICENSES.md  THREAT_MODEL.md  pyproject.toml
modules/01/: agent.py
modules/02/langgraph/: agent.py  test_server.py
modules/02/strands/: agent.py  server.py
modules/02/strands/scripts/: scripts.md  test_agent.sh  test_server.sh
modules/03/langgraph/: __init__.py  dataviz.py
modules/03/strands/: __init__.py  dataviz.py
modules/03/strands/scripts/: scripts.md
modules/04/langgraph/: dataviz_agent.py  electrify_agent.py  electrify_prompt.md  electrify_server.py  orchestrator_agent.py
modules/04/strands/: dataviz_agent.py  electrify_agent.py  electrify_server.py  orchestrator_agent.py
modules/04/strands/scripts/: scripts.md
modules/05/langgraph/: agentcore_runtime_adapter.py  dataviz_agent.py  dataviz_server.py  deploy_gateway_simple.py  electrify_agent.py  electrify_prompt.md  orchestrator_agent.py  orchestrator_prompt.md  requirements.txt
modules/05/langgraph/common/: agent.py  cli.py  prompts.py  sanitize.py  types.py
modules/05/langgraph/deploy/: setup_deploy.sh
modules/05/langgraph/deploy/agentcore/: .gitignore  agentcore.json
modules/05/langgraph/deploy/agentcore/cdk/: cdk.json
modules/05/strands/: agentcore_runtime_adapter.py  dataviz_agent.py  deploy_lambda.py  electrify_agent.py  electrify_server.py  orchestrator_agent.py  orchestrator_prompt.md  requirements.txt  test_memory.py
modules/05/strands/common/: agent.py  prompts.py  types.py
modules/05/strands/deploy/: setup_deploy.sh
modules/05/strands/deploy/agentcore/: agentcore.json  aws-targets.json
modules/05/strands/deploy/agentcore/cdk/: package.json  tsconfig.json
modules/05/strands/deploy/agentcore/cdk/lib/: cdk-stack.ts
